--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: The Soil Food Web Ontology
-description: Under construction!
+description: A formal model of soil trophic ecology
 
